Revision history for Sparky-Job-Api

{{$NEXT}}

    Introduce SPARKY_JOB_TIMEOUT
    Adds ">>>" markers for log messages 
    (to allow filtering on client side)

0.0.4 2022-03-13T09:40:00Z

    Job get-file, :text modifier support
    Improvement - try to use file for localhost
    Add job file endpoints

0.0.3 2022-03-13T05:20:00Z

    `wait-job` - increase sleep to 5 for http calls, to
    reduce load to sparky web 

    Bugfix - add `:workers` parameter to wait-job methods 

    Timeout renamed to sleep

    New timeout setting means stop waiting for a job
    after `$timeout` seconds

0.0.2 2022-02-14T00:00:00Z

    Usage clarification
    Stage=main is default now

0.0.1 2022-02-13T00:00:00Z

    First release